dapr/ingress/dapr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dapr-ingress
  namespace: dapr-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
spec:
  rules:
  - host: dapr.tradevisdemo.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dapr-dashboard
            port:
              name: https
  tls:
  - hosts:
    - dapr.tradevisdemo.link
    secretName: "tls-secret"
